[gd_scene load_steps=8 format=3 uid="uid://crfx06vy8h3dc"]

[ext_resource type="Texture2D" uid="uid://kccy33r4vvgr" path="res://Asset/BlackandWhiteUI.png/dialogue-bar.png" id="1_ieaw6"]
[ext_resource type="Script" path="res://Script/DialogueSystem.gd" id="1_j6evc"]
[ext_resource type="Texture2D" uid="uid://dvy2c7ugjy3nt" path="res://Asset/BlackandWhiteUI.png/dialogue-next-button-normal.png" id="2_bb0mh"]
[ext_resource type="FontFile" uid="uid://cvkojm80tadh5" path="res://Asset/Font/gumela/Gumela.ttf" id="2_u62we"]
[ext_resource type="Texture2D" uid="uid://br12xlpvv3bl4" path="res://Asset/BlackandWhiteUI.png/dialogue-next-button-hovered.png" id="3_5lkdq"]
[ext_resource type="Texture2D" uid="uid://xfw2dsgdfwg3" path="res://Asset/BlackandWhiteUI.png/next-arrow-right.png" id="5_3016j"]
[ext_resource type="Texture2D" uid="uid://dxyw0uci7ftu5" path="res://Asset/BlackandWhiteUI.png/dialogue-name.png" id="6_0obwu"]

[node name="DialogueSystem" type="CanvasLayer"]

[node name="Panel" type="Panel" parent="."]
self_modulate = Color(1, 1, 1, 0)
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="DialogBox" type="NinePatchRect" parent="Panel"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.235
anchor_top = 0.711
anchor_right = 0.768
anchor_bottom = 0.891
offset_left = -0.200012
offset_top = 64.12
offset_right = 0.439941
offset_bottom = 63.72
grow_horizontal = 2
grow_vertical = 0
texture = ExtResource("1_ieaw6")
script = ExtResource("1_j6evc")

[node name="LabelDialog" type="Label" parent="Panel/DialogBox"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.122
anchor_top = 0.33
anchor_right = 0.122
anchor_bottom = 0.33
offset_left = 0.071991
offset_top = -0.0199814
offset_right = 704.072
offset_bottom = 62.98
grow_horizontal = 2
grow_vertical = 2
theme_override_fonts/font = ExtResource("2_u62we")
theme_override_font_sizes/font_size = 30
text = "helo"
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 2

[node name="NextButton" type="TextureButton" parent="Panel/DialogBox"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.871
anchor_top = 0.577
anchor_right = 0.871
anchor_bottom = 0.577
offset_left = 0.0959473
offset_top = -14.938
offset_right = 65.0959
offset_bottom = 47.062
texture_normal = ExtResource("2_bb0mh")
texture_pressed = ExtResource("3_5lkdq")
texture_hover = ExtResource("3_5lkdq")
texture_focused = ExtResource("3_5lkdq")
stretch_mode = 0

[node name="NinePatchRect" type="NinePatchRect" parent="Panel/DialogBox/NextButton"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.323
anchor_top = 0.306
anchor_right = 0.323
anchor_bottom = 0.306
offset_left = -1.995
offset_top = -0.972002
offset_right = 27.005
offset_bottom = 29.028
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("5_3016j")

[node name="CharacterBox" type="NinePatchRect" parent="Panel/DialogBox"]
layout_mode = 1
anchors_preset = -1
anchor_left = -0.003
anchor_top = -0.448
anchor_right = -0.003
anchor_bottom = -0.448
offset_left = 7.072
offset_top = -1.088
offset_right = 239.072
offset_bottom = 71.912
texture = ExtResource("6_0obwu")

[node name="LabelCharacter" type="Label" parent="Panel/DialogBox/CharacterBox"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_right = -5.0
offset_bottom = -8.0
grow_horizontal = 2
grow_vertical = 2
theme_override_fonts/font = ExtResource("2_u62we")
theme_override_font_sizes/font_size = 32
text = "tes"
horizontal_alignment = 1
vertical_alignment = 1
